--- a/packages/shop/package.json
+++ b/packages/shop/package.json
@@ -51,6 +51,7 @@
     "react-stripe-elements": "^6.1.2",
     "react-styled-flexboxgrid": "^3.2.1",
     "react-text-mask": "^5.4.3",
+    "react-typical": "^0.1.3",
     "react-waypoint": "^9.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.1.1",
