--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,8 @@
     "graphql-tools": "^6.0.3",
     "lodash": "^4.17.15",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.0",
+    "sequelize-cli": "^6.2.0",
     "type-graphql": "^1.0.0-rc.2",
     "typedi": "^0.8.0"
   },
