--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,14 +9,21 @@
     "start": "NODE_ENV=production node dist/server.shop.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.14.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fuse.js": "6.0.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^6.0.3",
+    "ioredis": "^4.17.3",
     "lodash": "^4.17.15",
+    "mariadb": "^2.4.1",
     "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.1",
@@ -25,8 +32,12 @@
     "typedi": "^0.8.0"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.17.2",
     "@types/lodash": "^4.14.153",
     "@types/node": "^14.0.5",
     "copyfiles": "^2.3.0",
