--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,14 +14,13 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
-    "connect-redis": "^5.0.0",
+    "connect-session-sequelize": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fuse.js": "6.0.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^6.0.3",
-    "ioredis": "^4.17.3",
     "lodash": "^4.17.15",
     "mariadb": "^2.4.1",
     "mysql2": "^2.1.0",
