--- a/packages/admin/public/manifest.json
+++ b/packages/admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PickBazar",
-  "name": "PickBazar",
+  "short_name": "Chario Go",
+  "name": "Chario Go",
   "icons": [
     {
       "src": "favicon.ico",
