--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chario-go/api",
+  "name": "@pick-bazar/api",
   "version": "3.0.0",
   "scripts": {
     "shop-dev": "ts-node-dev --respawn server.ts",
