--- a/packages/api/vercel.json
+++ b/packages/api/vercel.json
@@ -2,22 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.admin.ts",
-      "use": "@now/node-server"
-    },
-    {
-      "src": "./server.shop.ts",
+      "src": "./server.ts",
       "use": "@now/node-server"
     }
   ],
   "routes": [
     {
-      "src": "/admin/graphql",
-      "dest": "server.admin.ts"
-    },
-    {
       "src": "/shop/graphql",
-      "dest": "server.shop.ts"
+      "dest": "server.ts"
     }
   ]
 }
